[package]
name = "better_comprehension"
authors = ["Hegui Dai <natural_selection_@outlook.com>"]
description = "collection and iterator comprehensions for Rust"
license = "MIT"
keywords = [
    "macro",
    "procedural",
    "procedural-macro",
    "collection-comprehension",
    "comprehension",
]
repository = "https://github.com/Natural-selection1/better-comprehension-in-rust"
readme = "README.md"
version = "1.0.0"
edition = "2024"
exclude = ["src/main.rs", "target", ".vscode"]


[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"
